--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
     <link rel="stylesheet" href="estilos.css">
     <title>Hollow Knight Silksong</title>
 </head>
-<body>
-    <header class="container-fluid">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<body class="bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="#">
-                <img src="img/logo silksong png.png" alt="logo" height="100px">
+                <img src="img/silksongLogoBlanco.png" alt="logo" height="100px">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -42,19 +41,27 @@
                   </li>
               </ul>
             </div>
-          </nav>
-    </header>
-    <main class="container-fluid bg-dark">
-        <div class="container-fluid portadatitulo">
-            <h1>El indie más esperado de los últimos años</h1>
-            <p>Hollow Knight: Silksong es la secuela de Hollow Knight, uno de los videojuegos de acción y plataformas del estilo metroidvania más celebrados y exitosos de los últimos tiempos. Encarnando a Hornet, princesa protectora de Hallownest, deberemos sobrevivir en un nuevo mundo peligroso y desconocido.
-            </p>
+        </nav>
+
+
+        <div class="portada d-flex flex-column align-items-center p-5">
+            <h1 class="bg-danger p-2 rounded">El indie más esperado de los últimos años</h1>
         </div>
-        <div class="container-fluid text-center portada-articulo">
-            <p>Hollow Knight tuvo tan buena acogida que lo que en principio iba a ser un DLC se ganó el puesto como título independiente, aunque aun sin fecha de lanzamiento . En Silksong recorreremos el reino de Pharloom bajo la atenta mirada de Hornet, la princesa de Hallownest y una letal cazadora. Su misión será la de escapar de su encierro y averiguar qué está sucediendo en una misteriosa tierra.</p>
+    <main class="container-fluid bg-dark">  
+        <div class="row mt-4">
+            <div class="col-lg-3 d-flex justify-content-center align-items-center portada-articulo">
+                <p class="portada-parrafo rounded p-1">Hollow Knight: Silksong es la secuela de Hollow Knight, uno de los videojuegos de acción y plataformas del estilo metroidvania más celebrados y exitosos de los últimos tiempos. Encarnando a Hornet, princesa protectora de Hallownest, deberemos sobrevivir en un nuevo mundo peligroso y desconocido.
+                </p>
+            </div>
+            <div class="col-lg-6 d-flex ">
+                <img class="mw-100 rounded" src="img/Hollow-Knight-1000x576.jpg" alt="">
+            </div>
+            <div class="col-lg-3 d-flex justify-content-center align-items-center portada-articulo">
+                <p class="portada-parrafo rounded p-1">Hollow Knight tuvo tan buena acogida que lo que en principio iba a ser un DLC se ganó el puesto como título independiente, aunque aun sin fecha de lanzamiento . En Silksong recorreremos el reino de Pharloom bajo la atenta mirada de Hornet, la princesa de Hallownest y una letal cazadora. Su misión será la de escapar de su encierro y averiguar qué está sucediendo en una misteriosa tierra.</p>
+            </div>
         </div>
-        <div class="row requisitos">
-            <div class="col-sm-4 col-md-5">
+        <div class="row requisitos mb-5">
+            <div class="col-sm-5 col-md-5">
                 <h3>Requisitos recomendados</h3>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">SO: </strong>Windows 10</li>
@@ -65,7 +72,7 @@
                     <li class="list-group-item">Almacenamiento: </strong>9 GB de espacio disponible</li>
                 </ul>
             </div>
-            <div class="col-sm-4 col-md-5 offset-sm-4 offset-md-2">
+            <div class="col-sm-5 col-md-5 offset-sm-2 offset-md-2">
                 <h3>Requisitos minimos</h3>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">SO: </strong>Windows 7</li>
@@ -77,8 +84,8 @@
                 </ul>
             </div>
         </div>
-    </main>
-    <footer class="container-fluid">
+    </main>  
+    <footer>
         <p>Todos los derechos reservados © Team Cherry</p>
         <a href="https://twitter.com/TeamCherryGames">
             <i class="fa-brands fa-twitter"></i>
