--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 
         <div class="portada d-flex flex-column align-items-center p-5">
-            <h1 class="bg-danger p-2 rounded">El indie más esperado de los últimos años</h1>
+            <h1 class="bg-danger p-2 rounded text-uppercase">El indie más esperado de los últimos años</h1>
         </div>
     <main class="container-fluid bg-dark">  
         <div class="row mt-4">
@@ -85,7 +85,7 @@
             </div>
         </div>
     </main>  
-    <footer>
+    <footer class="mt-3">
         <p>Todos los derechos reservados © Team Cherry</p>
         <a href="https://twitter.com/TeamCherryGames">
             <i class="fa-brands fa-twitter"></i>
