completo pag equipo y tienda y otros cambios

--- a/lore.html
+++ b/lore.html
@@ -12,7 +12,7 @@
 </head>
 <body class="bg-lore">
     
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark d-flex justify-content-center">
           <a class="navbar-brand" href="#">
               <img src="img/silksongLogoBlanco.png" alt="logo" height="100px">
           </a>
@@ -21,7 +21,7 @@
           </button>
         
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
+            <ul class="navbar-nav mr-auto text-center">
               <li class="nav-item">
                 <a class="nav-link" href="index.html">Home</a>
               </li>
@@ -105,9 +105,9 @@
       <div class="row mt-4 lore-5">
         <div class="col-md-6 col-lg-6">
           <h2>5) El Plan</h2>
-          <p>El Rey habia encontrado en lo más profundo del reino al Abismo, un lugar donde no llega la luz y fuente de un poder tan oscuro qué pensó podría ser la solución a la infeccion: el Vacio. Y empezó a experimentar con él para crear un receptáculo puro capaz de contener la infección en su interior.
+          <p>El Rey habia encontrado en lo más profundo del reino al <strong>Abismo</strong>, un lugar donde no llega la luz y fuente de un poder tan oscuro qué pensó podría ser la solución a la infeccion: el Vacio. Y empezó a experimentar con él para crear un receptáculo puro capaz de contener la infección en su interior.
           </p>
-          <p>Luego de cientos intentos fallidos, creó al receptáculo perfecto, o eso creía. Era el Hollow Knight. El Hollow Knight absorbió a Destello y ella se quedó atrapada en su mente, como en un sueño. Para asegurarse, el Rey consiguió que tres grandes ciudadanos se convirtieran en los sellos que contendrían al Hollow Knight entrando en un sueño eterno, en caso de que algo saliera mal.
+          <p>Luego de cientos intentos fallidos, creó al receptáculo perfecto, o eso creía. Era el <em>Hollow Knight</em>. El Hollow Knight absorbió a Destello y ella se quedó atrapada en su mente, como en un sueño. Para asegurarse, el Rey consiguió que tres grandes ciudadanos se convirtieran en los sellos que contendrían al Hollow Knight entrando en un sueño eterno, en caso de que algo saliera mal.
           </p>
         </div>
         <div class="col-md-6 col-lg-6 d-flex align-items-center">
