--- a/tienda.html
+++ b/tienda.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="estilos.css">
     <title>Hollow Knight Silksong</title>
 </head>
-<body class="bg-dark">
+<body>
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark d-flex justify-content-center">
             <a class="navbar-brand" href="#">
                 <img src="img/silksongLogoBlanco.png" alt="logo" height="100px">
             </a>
@@ -21,7 +21,7 @@
             </button>
           
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav mr-auto">
+              <ul class="navbar-nav mr-auto text-center">
                 <li class="nav-item">
                   <a class="nav-link" href="index.html">Home</a>
                 </li>
@@ -43,8 +43,43 @@
               </ul>
             </div>
           </nav>
+
+        <section class="body-tienda">
+          <div class="container d-flex flex-column align-items-center justify-content-center">
+            <h2 class="text-center mt-5">Visita la Tienda de Hollow Knight Silksong!</h2>
+              <div class="row icon-tienda">
+                <a href="https://store.steampowered.com/app/1030300/Hollow_Knight_Silksong/">
+                    <i class="fa-brands fa-steam"></i>
+                </a>
+                <a href="https://store.playstation.com/en-us/concept/10005908">
+                    <i class="fa-brands fa-playstation"></i>
+                </a>
+                <a href="https://www.xbox.com/es-AR/games/hollow-knight-silksong">
+                    <i class="fa-brands fa-xbox"></i>
+                </a>
+              </div> 
+           <iframe class="link-yt" src="https://www.youtube.com/embed/JSfuFlhsxZY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </section>  
+        <section class="body-tienda2">
+          <div class="container d-flex flex-column align-items-center justify-content-center">
+            <h2 class="text-center mt-5" >Visita la Tienda de Hollow Knight!</h2>
+            <div class="row icon-tienda">
+              <a href="https://store.steampowered.com/app/367520/Hollow_Knight/">
+                  <i class="fa-brands fa-steam"></i>
+              </a>
+              <a href="https://store.playstation.com/es-pe/product/UP1822-CUSA13632_00-HOLLOWKNIGHT18US">
+                  <i class="fa-brands fa-playstation"></i>
+              </a>
+              <a href="https://www.xbox.com/es-ar/games/store/Hollow-Knight-Edicion-Corazon-Vacio/9MW9469V91LM">
+                  <i class="fa-brands fa-xbox"></i>
+              </a>
+            </div>  
+            <iframe class="link-yt" src="https://www.youtube.com/embed/UAO2urG23S4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </section>
       
-      <footer class="mt-3">
+      <footer class="bg-dark">
         <p>Todos los derechos reservados © Team Cherry</p>
         <a href="https://twitter.com/TeamCherryGames">
             <i class="fa-brands fa-twitter"></i>
