--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/logohollowhead.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="estilos.css">
     <title>Hollow Knight Silksong</title>
 </head>
-<body class="bg-dark">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<body class="bg-index">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark d-flex justify-content-center">
             <a class="navbar-brand" href="#">
                 <img src="img/silksongLogoBlanco.png" alt="logo" height="100px">
             </a>
@@ -20,7 +21,7 @@
             </button>
           
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav mr-auto">
+              <ul class="navbar-nav mr-auto text-center">
                 <li class="nav-item active">
                   <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
@@ -45,9 +46,9 @@
 
 
         <div class="portada d-flex flex-column align-items-center p-5">
-            <h1 class="bg-danger p-2 rounded text-uppercase">El indie más esperado de los últimos años</h1>
+            <h1 class="bg-portada p-2 rounded text-uppercase">El indie más esperado de los últimos años</h1>
         </div>
-    <main class="container-fluid bg-dark">  
+    <main class="container-fluid">  
         <div class="row mt-4">
             <div class="col-lg-3 d-flex justify-content-center align-items-center portada-articulo">
                 <p class="portada-parrafo rounded p-1">Hollow Knight: Silksong es la secuela de Hollow Knight, uno de los videojuegos de acción y plataformas del estilo metroidvania más celebrados y exitosos de los últimos tiempos. Encarnando a Hornet, princesa protectora de Hallownest, deberemos sobrevivir en un nuevo mundo peligroso y desconocido.
@@ -63,7 +64,7 @@
         <div class="row requisitos mb-5">
             <div class="col-sm-5 col-md-5">
                 <h3>Requisitos recomendados</h3>
-                <ul class="list-group list-group-flush">
+                <ul class="list-group list-group-flush rounded">
                     <li class="list-group-item">SO: </strong>Windows 10</li>
                     <li class="list-group-item">Procesador: </strong>Intel Core I5</li>
                     <li class="list-group-item">Memoria: </strong>8 GB de RAM</li>
@@ -74,7 +75,7 @@
             </div>
             <div class="col-sm-5 col-md-5 offset-sm-2 offset-md-2">
                 <h3>Requisitos minimos</h3>
-                <ul class="list-group list-group-flush">
+                <ul class="list-group list-group-flush rounded">
                     <li class="list-group-item">SO: </strong>Windows 7</li>
                     <li class="list-group-item">Procesador: </strong>Intel Core 2 Duo E5200</li>
                     <li class="list-group-item">Memoria: </strong>4 GB de RAM</li>
@@ -85,7 +86,7 @@
             </div>
         </div>
     </main>  
-    <footer class="mt-3">
+    <footer class="bg-secondary">
         <p>Todos los derechos reservados © Team Cherry</p>
         <a href="https://twitter.com/TeamCherryGames">
             <i class="fa-brands fa-twitter"></i>
