--- a/personajes.html
+++ b/personajes.html
@@ -16,7 +16,7 @@
 </head>
 <body class="fondo-personajes">
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark d-flex justify-content-center">
             <a class="navbar-brand" href="#">
                 <img src="img/silksongLogoBlanco.png" alt="logo" height="100px">
             </a>
@@ -25,7 +25,7 @@
             </button>
           
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav mr-auto">
+              <ul class="navbar-nav mr-auto text-center">
                 <li class="nav-item">
                   <a class="nav-link" href="index.html">Home</a>
                 </li>
