agrego fuente, y arreglo detalles

--- a/equipo.html
+++ b/equipo.html
@@ -61,8 +61,8 @@
                 <img src="img/ari gibson.png" class="card-img-top " alt="imagen1">
                 <div class="card-body">
                   <h5 class="card-title">Ari Gibson</h5>
-                  <p class="card-text">Co-director de Team Cherry y responsable del diseño de juego. es quien crea el arte, ambiente y anima cientos de insectos para el juego.
-                  Ha participado en el estudio de animación Mechanical Apple y ha trabajado en varios projectos desde peliculas, juegos y videos musicales.</p>
+                  <p class="card-text"><strong> Co-director </strong>de Team Cherry y responsable del <strong>diseño</strong> de juego. es quien crea el arte, ambiente y anima cientos de insectos para el juego.
+                  Ha participado en el estudio de animación <em>Mechanical Apple</em> y ha trabajado en varios projectos desde peliculas, juegos y videos musicales.</p>
                 </div>
               </div>
             </div>
@@ -71,7 +71,7 @@
                 <img src="img/will pellen.png" class="card-img-top " alt="imagen1">
                 <div class="card-body">
                   <h5 class="card-title">William Pellen</h5>
-                  <p class="card-text">Co-director de team Cherry y diseña el juego junto Ari. el principal encargado de crear enemigos, jefes y el comportamiento de los personajes.
+                  <p class="card-text"><strong> Co-director </strong> de team Cherry y diseña el juego junto Ari. el principal encargado de <strong>crear</strong> enemigos, jefes y el comportamiento de los personajes.
                   William ha diseñado y creado juegos por años, construyendo mundos para ser explorados y conquistados por cientos de jugadores.</p>
                 </div>
               </div>
@@ -80,8 +80,9 @@
               <div class="card border-danger" style="width: 18rem;">
                 <img src="img/kacl vine-byn.png" class="card-img-top " alt="imagen1">
                 <div class="card-body">
-                  <h5 class="card-title">David Kazi</h5>
-                  <p class="card-text">Fue el responsable de la dirección técnica de Hollow Knight. Su trabajo se dividía en lograr hacer correr el juego y arreglar bugs y errores creados por el equipo. Ya no forma parte de Team Cherry..</p>
+                  <h5 class="card-title">Jack Vine</h5>
+                  <p class="card-text">Es el talentoso <strong>codificador</strong> del equipo, se encarga de construir, ajustar y optimizar los sistemas de juego.
+                  Estuvo parcialmente involucrado en el primer juego (Hollow Knight) adaptando dicho juego para las consolas y para crear uno de los paquetes de contenido adicional gratuitos, Godmaster.</p>
                 </div>
               </div>
             </div>
