agrego comments y link de logo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body class="bg-index">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark d-flex justify-content-center">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
                 <img src="img/silksongLogoBlanco.png" alt="logo" height="100px">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,6 +47,8 @@
               </ul>
             </div>
         </nav>
+
+        <!-- ---- portada y articulos ---- -->
 
 
         <div class="portada d-flex flex-column align-items-center p-5">
@@ -90,6 +92,8 @@
             </div>
         </div>
     </main>  
+
+
     <footer class="bg-secondary">
         <p>Todos los derechos reservados © Team Cherry</p>
         <a href="https://twitter.com/TeamCherryGames">
