--- a/lore.html
+++ b/lore.html
@@ -13,7 +13,7 @@
 <body class="bg-lore">
     
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark d-flex justify-content-center">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="index.html">
               <img src="img/silksongLogoBlanco.png" alt="logo" height="100px">
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,6 +43,9 @@
             </ul>
           </div>
        </nav>
+
+
+       <!-- ------ Titulo y capitulos de lore/historia -->
     
 
     <section class="container-lg">
