--- a/personajes.html
+++ b/personajes.html
@@ -17,7 +17,7 @@
 <body class="fondo-personajes">
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark d-flex justify-content-center">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
                 <img src="img/silksongLogoBlanco.png" alt="logo" height="100px">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,6 +47,8 @@
               </ul>
             </div>
           </nav>
+
+          <!-- --- titulo y listas --- -->
 
         <div class="personajes d-flex flex-column align-items-center justify-content-center">
             <h1 class="titulo-personajes p-4 rounded">Conoce los personajes</h1>
