--- a/tienda.html
+++ b/tienda.html
@@ -13,7 +13,7 @@
 <body>
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark d-flex justify-content-center">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
                 <img src="img/silksongLogoBlanco.png" alt="logo" height="100px">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,6 +43,8 @@
               </ul>
             </div>
           </nav>
+
+          <!-- --- tienda main --- -->
 
         <section class="body-tienda">
           <div class="container d-flex flex-column align-items-center justify-content-center">
@@ -78,6 +80,9 @@
             <iframe class="link-yt" src="https://www.youtube.com/embed/UAO2urG23S4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </section>
+
+
+        
       
       <footer class="bg-dark">
         <p>Todos los derechos reservados © Team Cherry</p>
