creo carpetas de pages y css y arreglo links

--- a/pages/personajes.html
+++ b/pages/personajes.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="img/logohollowhead.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/logohollowhead.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <link rel="stylesheet" href="estilos.css">
-    <title>Hollow Knight Silksong</title>
+    <link rel="stylesheet" href="/css/estilos.css">
+    <title>Personajes</title>
 </head>
 <body class="fondo-personajes">
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark d-flex justify-content-center">
-            <a class="navbar-brand" href="index.html">
-                <img src="img/silksongLogoBlanco.png" alt="logo" height="100px">
+            <a class="navbar-brand" href="/index.html">
+                <img src="/img/silksongLogoBlanco.png" alt="logo" height="100px">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -27,22 +27,22 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto text-center">
                 <li class="nav-item">
-                  <a class="nav-link" href="index.html">Home</a>
+                  <a class="nav-link" href="/index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="lore.html">Lore</a>
+                  <a class="nav-link" href="/pages/lore.html">Historia</a>
                 </li>
                 <li class="nav-item  active">
-                    <a class="nav-link" href="personajes.html">Personajes <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/pages/personajes.html">Personajes <span class="sr-only">(current)</span></a>
                   </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="equipo.html">Equipo</a>
+                    <a class="nav-link" href="/pages/equipo.html">Equipo</a>
                   </li>  
                 <li class="nav-item">
-                  <a class="nav-link" href="tienda.html">Tienda</a>
+                  <a class="nav-link" href="/pages/tienda.html">Tienda</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="galeria.html">Galeria</a>
+                    <a class="nav-link" href="/pages/galeria.html">Galeria</a>
                   </li>
               </ul>
             </div>
@@ -58,38 +58,38 @@
         <div class="listaPersonajes1">
           
           <div class="personajes1">
-          <h3>The Knight</h3><img class="animate__animated animate__pulse" src="img/png hollow knight.webp" alt="hollow knight" height="200px" width="auto">
+          <h3>The Knight</h3><img class="animate__animated animate__pulse" src="/img/png hollow knight.webp" alt="hollow knight" height="200px" width="auto">
           <p>Es el personaje que el jugador controla durante todo el juego. El Caballero nacio como un receptaculo, parte del plan/experimento del Rey Palido juntando el Vacio y los poderes del Rey y la Dama Blanca. Luego de años lejos de sus tierras, le toca volver a salvar el reino y descubrir los misterios enterrados.</p>
           </div>
           <div class="personajes1">
-          <h3>Hornet</h3><img class="animate__animated animate__pulse" src="img/hornet png.webp" alt="hornet" height="170px" width="auto">
+          <h3>Hornet</h3><img class="animate__animated animate__pulse" src="/img/hornet png.webp" alt="hornet" height="170px" width="auto">
           <p>Nos encontraremos con ella varias veces en nuestra aventura, en un principio nos intenta a detener pero luego nos va informando de cual debe ser nuestro rol para salvar el reino. Ella en realidad es hija del Rey Palido y Herrah, una de las Soñadoras que protege al Hollow Knight, y reina del aracnido Nido Profundo.</p>
           </div>
           <div class="personajes1">
-          <h3>Quirrel</h3><img class="animate__animated animate__pulse" src="img/Quirrel2.webp" alt="Quirrel" height="190px" width="auto">
+          <h3>Quirrel</h3><img class="animate__animated animate__pulse" src="/img/Quirrel2.webp" alt="Quirrel" height="190px" width="auto">
           <p>Un curioso personaje que visita varias zonas del juego, portando un Aguijon y una misteriosa mascara. El es un viajero que segun dice fue llamado por una voz o alguna intuicion. En su juventud era aprendiz de Monomon, la bibliotecaria que se volvio una Soñadora, para proteger al Hollow Knight.</p>
           </div>
           <div class="personajes1">
-          <h3>Zote</h3><img class="animate__animated animate__pulse" src="img/Npc_zote.webp" alt="Zote" height="200px" width="auto">
+          <h3>Zote</h3><img class="animate__animated animate__pulse" src="/img/Npc_zote.webp" alt="Zote" height="200px" width="auto">
           <p>Este no tan intimidante ni tan simpatico guerrero lo encontraremos en varios peligros, y a pesar de que le ayudemos, no nos agradecera y e intentara advertirnos sobre su habilidad alardeando de que es un gran campeon.</p>
           </div>
       </div>
       <h2 class="titulo-listas">Personajes importantes de la historia</h2>
       <div class="listaPersonajes1">
           <div class="personajes1">
-          <h3>Rey Palido</h3><img class="animate__animated animate__pulse" src="img/png pale king.webp" alt="rey palido" height="200px" width="auto">
+          <h3>Rey Palido</h3><img class="animate__animated animate__pulse" src="/img/png pale king.webp" alt="rey palido" height="200px" width="auto">
           <p>El antiguo Wyrm que renacio como un insecto, brindo consciencia a los insectos y fundo Hallownest. Se unio con la Dama Blanca, y junto a 5 Caballeros dieron forma al Reino. Cuando el peligro volvio, fue el responsable de crear los receptaculos para contener la infeccion. Siendo el Hollow Knight el principal encargado de tal tarea.</p>
           </div>
           <div class="personajes1">
-          <h3>La Dama Blanca</h3><img class="animate__animated animate__pulse" src="img/png white lady.webp" alt="dama blanca" height="200px" width="auto">
+          <h3>La Dama Blanca</h3><img class="animate__animated animate__pulse" src="/img/png white lady.webp" alt="dama blanca" height="200px" width="auto">
           <p>La antigua Reina y esposa del Rey Palido, y tambien responsable de la creacion de los receptaculos. Luego de su participacion en tal experimento y su fracaso, decidio esconderse y atraparse para evitar tener mas descendencia. Al final apenas podia ver y es quien ayuda al protagonista a detener a la malvada Destello.</p>
           </div>
           <div class="personajes1">
-          <h3>Hollow Knight</h3><img class="animate__animated animate__pulse" src="img/png real hollow knight.webp" alt="Hollow knight" height="180px" width="auto">
+          <h3>Hollow Knight</h3><img class="animate__animated animate__pulse" src="/img/png real hollow knight.webp" alt="Hollow knight" height="180px" width="auto">
           <p>Es el receptaculo elejido por el Rey para contener a Destello dentro de su mente y frenar la infeccion. Contienen en el poder del Abismo y del Rey y la Reina dee Hallownest. El ser vasijas con el poder del Vacio, no pueden hablar, ni poseen voluntad ni consciencia. En su tarea fracaso ya que fue craido como un hijo por parte del Rey Palido.</p>
           </div>
           <div class="personajes1">
-          <h3>Destello</h3><img class="animate__animated animate__pulse" src="img/png radiance.webp" alt="destello" height="200px" width="auto">
+          <h3>Destello</h3><img class="animate__animated animate__pulse" src="/img/png radiance.webp" alt="destello" height="200px" width="auto">
           <p>Es un Ser Superior de luz de la tribu de las polillas. Su poder invadia las mentes de los insectos mas pequeños, volviendolos sus peones. Ella quedo atrapada en un mundo onirico mucho tiempo atras y solo se podia aparacer en sueños, de esa forma ganaba la mente de sus victimas. Por el plan del Rey Palido quedo encerrada en la mente del Hollow Knight, pero aun asi su poder se escapaba y siguio infectando.</p>
           </div>
       </div>
