--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="img/logohollowhead.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/logohollowhead.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link
@@ -12,39 +12,39 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="/css/estilos.css">
     <title>Hollow Knight Silksong</title>
 </head>
 <body class="bg-index">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark d-flex justify-content-center">
-            <a class="navbar-brand" href="index.html">
-                <img src="img/silksongLogoBlanco.png" alt="logo" height="100px">
+            <a class="navbar-brand" href="/index.html">
+                <img src="/img/silksongLogoBlanco.png" alt="logo" height="100px">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
           
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav mr-auto text-center">
+                <ul class="navbar-nav mr-auto text-center">
                 <li class="nav-item active">
                   <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="lore.html">Lore</a>
+                  <a class="nav-link" href="pages/lore.html">Historia</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="personajes.html">Personajes</a>
+                    <a class="nav-link" href="pages/personajes.html">Personajes</a>
                   </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="equipo.html">Equipo</a>
+                    <a class="nav-link" href="pages/equipo.html">Equipo</a>
                   </li>  
                 <li class="nav-item">
-                  <a class="nav-link" href="tienda.html">Tienda</a>
+                  <a class="nav-link" href="pages/tienda.html">Tienda</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="galeria.html">Galeria</a>
+                    <a class="nav-link" href="pages/galeria.html">Galeria</a>
                   </li>
-              </ul>
+                </ul>
             </div>
         </nav>
 
