arreglo y reviso los links de img y pages

--- a/pages/lore.html
+++ b/pages/lore.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Conoce la historia de Hollow Knight y su mundo">
     <meta name="keywords" content="historia, lore, destello, hollow, hallownest, juego">
-    <link rel="shortcut icon" href="/img/logohollowhead.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/logohollowhead.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
     <title>Historia y Lore</title>
 </head>
 <body class="bg-lore">
     
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark d-flex justify-content-center">
           <a class="navbar-brand" href="/index.html">
-              <img src="/img/silksongLogoBlanco.png" alt="logo" height="100px">
+              <img src="../img/silksongLogoBlanco.png" alt="logo" height="100px">
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -25,22 +25,22 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto text-center">
               <li class="nav-item">
-                <a class="nav-link" href="/index.html">Home</a>
+                <a class="nav-link" href="../index.html">Home</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="/pages/lore.html">Historia <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="../pages/lore.html">Historia <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="/pages/personajes.html">Personajes</a>
+                  <a class="nav-link" href="../pages/personajes.html">Personajes</a>
                 </li>
               <li class="nav-item">
-                  <a class="nav-link" href="/pages/equipo.html">Equipo</a>
+                  <a class="nav-link" href="../pages/equipo.html">Equipo</a>
                 </li>  
               <li class="nav-item">
-                <a class="nav-link" href="/pages/tienda.html">Tienda</a>
+                <a class="nav-link" href="../pages/tienda.html">Tienda</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="/pages/galeria.html">Galeria</a>
+                  <a class="nav-link" href="../pages/galeria.html">Galeria</a>
                 </li>
             </ul>
           </div>
@@ -57,7 +57,7 @@
             <p>Hollow Knight es un videojuego perteneciente al género metroidvania desarrollado y publicado por <strong>Team Cherry</strong>. El videojuego cuenta la historia del Caballero, en su búsqueda para descubrir los secretos del largamente abandonado reino de <em> Hallownest</em>, cuyas profundidades atraen a los aventureros y valientes con la promesa de tesoros o la respuesta a misterios antiguos.</p>
         </div>
         <div class="col-md-6 col-lg-6">
-          <img class="mw-100 rounded" src="/img/hollow-knight.webp" alt="">
+          <img class="mw-100 rounded" src="../img/hollow-knight.webp" alt="">
         </div>
       </div>
       <div class="row mt-4 lore-1">
@@ -70,12 +70,12 @@
             </p>
         </div>
         <div class="col-md-6 col-lg-6 d-flex align-items-center">
-          <img class="mw-100 rounded" src="/img/radiancepic.jpg" alt="">
+          <img class="mw-100 rounded" src="../img/radiancepic.jpg" alt="">
         </div>
       </div>
       <div class="row mt-4 lore-2">
         <div class="col-md-6 col-lg-6 d-flex align-items-center">
-          <img class="mw-100 rounded" src="/img/Screenshot_HK_The_Pale_King_05.webp" alt="">
+          <img class="mw-100 rounded" src="../img/Screenshot_HK_The_Pale_King_05.webp" alt="">
         </div>
         <div class="col-md-6 col-lg-6">
           <h2>2) El rey pálido</h2>
@@ -90,7 +90,7 @@
           </p>
         </div>
         <div class="col-md-6 col-lg-6 d-flex align-items-center">
-          <img class="mw-100 rounded" src="/img/City_of_Tears_Fountain_Square.jpeg.webp" alt="">
+          <img class="mw-100 rounded" src="../img/City_of_Tears_Fountain_Square.jpeg.webp" alt="">
         </div>
         <div class="col-md-3 col-lg-3">
           <p>Las distintas tribus se establecieron y varias juraron lealtad al Rey Palido, y quienes no, llegaron a  un pacto de paz por el mismo Rey como fue el caso de las Mantis, qué protegían el reino de los peligros del Nido Profundo, o las abejas qué se aislaron sin ser parte del reino. <strong>La Ciudad de Lágrimas</strong> se convirtió en la capital donde visitantes y comerciantes se reunian, pero lo bueno no duró demasiado.</p>
@@ -98,7 +98,7 @@
       </div>
       <div class="row mt-4 lore-4">
         <div class="col-md-6 col-lg-6 d-flex align-items-center">
-          <img class="mw-100 rounded" src="/img/infection-radiance.webp" alt="">
+          <img class="mw-100 rounded" src="../img/infection-radiance.webp" alt="">
         </div>
         <div class="col-md-6 col-lg-6">
           <h2>4) La Venganza</h2>
@@ -116,12 +116,12 @@
           </p>
         </div>
         <div class="col-md-6 col-lg-6 d-flex align-items-center">
-          <img class="mw-100 rounded" src="/img/vesselsAbyss2.jpg" alt="">
+          <img class="mw-100 rounded" src="../img/vesselsAbyss2.jpg" alt="">
         </div>
       </div>
       <div class="row mt-4 lore-6">
         <div class="col-md-6 col-lg-6 d-flex align-items-center">
-          <img class="mw-100 rounded" src="/img/hollow-knight-shackled.webp" alt="">
+          <img class="mw-100 rounded" src="../img/hollow-knight-shackled.webp" alt="">
         </div>
         <div class="col-md-6 col-lg-6">
           <h2>6) Repercusiones</h2>
