--- a/pages/equipo.html
+++ b/pages/equipo.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Team Cherry, el equipo detras de Hollow Knight">
     <meta name="keywords" content="equipo, team, cherry, desarrollo, juego, hollow, knight, unity">
-    <link rel="shortcut icon" href="/img/logohollowhead.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/logohollowhead.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
     <title>Equipo</title>
 </head>
 <body>
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark d-flex justify-content-center">
             <a class="navbar-brand" href="/index.html">
-                <img src="/img/silksongLogoBlanco.png" alt="logo" height="100px">
+                <img src="../img/silksongLogoBlanco.png" alt="logo" height="100px">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -25,22 +25,22 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto text-center">
                 <li class="nav-item">
-                  <a class="nav-link" href="/index.html">Home</a>
+                  <a class="nav-link" href="../index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/pages/lore.html">Historia</a>
+                  <a class="nav-link" href="../pages/lore.html">Historia</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/pages/personajes.html">Personajes</a>
+                    <a class="nav-link" href="../pages/personajes.html">Personajes</a>
                   </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/pages/equipo.html">Equipo  <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="../pages/equipo.html">Equipo  <span class="sr-only">(current)</span></a>
                   </li>  
                 <li class="nav-item">
-                  <a class="nav-link" href="/pages/tienda.html">Tienda</a>
+                  <a class="nav-link" href="../pages/tienda.html">Tienda</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/pages/galeria.html">Galeria</a>
+                    <a class="nav-link" href="../pages/galeria.html">Galeria</a>
                   </li>
               </ul>
             </div>
@@ -49,7 +49,7 @@
         <div class="jumbotron jumbotron-fluid">
           <div class="container d-flex flex-column align-items-center">
             <h1 class="display-4">Conoce el equipo detras</h1>
-            <img src="/img/Team_cherry_Logo_Red.png" alt="logo team cherry" height="200px" width="auto">
+            <img src="../img/Team_cherry_Logo_Red.png" alt="logo team cherry" height="200px" width="auto">
             <p class="lead">Hollow Knight y Hollow Knight Silksong son desarrollados por Team Cherry. Un pequeño grupo independiente originario de Adelaide, Sur de Australia.</p>
           </div>
         </div>
@@ -60,7 +60,7 @@
           <div class="row">
             <div class="col-md-4 d-flex justify-content-center mt-3">
               <div class="card border-danger" style="width: 18rem;">
-                <img src="/img/ari gibson.png" class="card-img-top " alt="imagen1">
+                <img src="../img/ari gibson.png" class="card-img-top " alt="imagen1">
                 <div class="card-body">
                   <h5 class="card-title">Ari Gibson</h5>
                   <p class="card-text"><strong> Co-director </strong>de Team Cherry y responsable del <strong>diseño</strong> de juego. es quien crea el arte, ambiente y anima cientos de insectos para el juego.
@@ -70,7 +70,7 @@
             </div>
             <div class="col-md-4 d-flex justify-content-center mt-3">
               <div class="card border-danger" style="width: 18rem;">
-                <img src="/img/will pellen.png" class="card-img-top " alt="imagen1">
+                <img src="../img/will pellen.png" class="card-img-top " alt="imagen1">
                 <div class="card-body">
                   <h5 class="card-title">William Pellen</h5>
                   <p class="card-text"><strong> Co-director </strong> de team Cherry y diseña el juego junto Ari. el principal encargado de <strong>crear</strong> enemigos, jefes y el comportamiento de los personajes.
@@ -80,7 +80,7 @@
             </div>
             <div class="col-md-4  d-flex justify-content-center mt-3">
               <div class="card border-danger" style="width: 18rem;">
-                <img src="/img/kacl vine-byn.png" class="card-img-top " alt="imagen1">
+                <img src="../img/kacl vine-byn.png" class="card-img-top " alt="imagen1">
                 <div class="card-body">
                   <h5 class="card-title">Jack Vine</h5>
                   <p class="card-text">Es el talentoso <strong>codificador</strong> del equipo, se encarga de construir, ajustar y optimizar los sistemas de juego.
@@ -109,7 +109,7 @@
               <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
                 <div class="card-body d-flex align-items-center bg-secondary text-light">
                   <p class=" col-sm-5 col-md-6">El desarrollo empezó como un proyecto llamado Hungry Knight, y revelado en Kickstarter para recaudar fondos y poder realizar el juego de sus sueños, donde a medida qué las donaciones se sumaban iban agregando características y ampliando la producción del juego.</p>
-                  <img class="col-sm-7 col-md-6" src="/img/hungry knight.jpg" alt="hungry-knight">
+                  <img class="col-sm-7 col-md-6" src="../img/hungry knight.jpg" alt="hungry-knight">
                 </div>
               </div>
             </div>
@@ -124,7 +124,7 @@
               <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                 <div class="card-body d-flex align-items-center bg-secondary text-light">
                   <p class="col-sm-7 col-md-6">Todo el juego fue desarrollado con Unity, el motor de videojuegos multiplataforma creado por Unity Technologies. Lo más interesante es que todo el arte, diseño de personajes y animaciones básicas fue creado a mano.</p>
-                  <img class="col-sm-7 col-md-6" src="/img/Unity_Technologies_logo.svg.png" alt="">
+                  <img class="col-sm-7 col-md-6" src="../img/Unity_Technologies_logo.svg.png" alt="">
                 </div>
               </div>
             </div>
@@ -139,7 +139,7 @@
               <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                 <div class="card-body d-flex align-items-center bg-secondary text-light">
                   <p class="col-sm-8 col-md-6">Usando herramientas de diseño 2D en un ambiente 3D fue como construyeron los distintos niveles y la interacción con enemigos y el entorno.</p>
-                  <img class="col-sm-4 col-md-6" src="/img/02-6-unity_parallax.1-min-compressor.webp" alt="">
+                  <img class="col-sm-4 col-md-6" src="../img/02-6-unity_parallax.1-min-compressor.webp" alt="">
                 </div>
               </div>
             </div>
