--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Visita las tiendas de Hollow Kngiht y Silksong!">
     <meta name="keywords" content="tienda, juego, hollow, knight, silksong, sony, steam, xbox, play, trailer, video">
-    <link rel="shortcut icon" href="/img/logohollowhead.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/logohollowhead.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
     <title>Tienda</title>
 </head>
 <body>
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark d-flex justify-content-center">
             <a class="navbar-brand" href="/index.html">
-                <img src="/img/silksongLogoBlanco.png" alt="logo" height="100px">
+                <img src="../img/silksongLogoBlanco.png" alt="logo" height="100px">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -25,22 +25,22 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto text-center">
                 <li class="nav-item">
-                  <a class="nav-link" href="/index.html">Home</a>
+                  <a class="nav-link" href="../index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/pages/lore.html">Historia</a>
+                  <a class="nav-link" href="../pages/lore.html">Historia</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/pages/personajes.html">Personajes</a>
+                    <a class="nav-link" href="../pages/personajes.html">Personajes</a>
                   </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/pages/equipo.html">Equipo</a>
+                    <a class="nav-link" href="../pages/equipo.html">Equipo</a>
                   </li>  
                 <li class="nav-item active">
-                  <a class="nav-link" href="/pages/tienda.html">Tienda  <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="../pages/tienda.html">Tienda  <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/pages/galeria.html">Galeria</a>
+                    <a class="nav-link" href="../pages/galeria.html">Galeria</a>
                   </li>
               </ul>
             </div>
