agrego correcciones de 3ra entrega

--- a/pages/equipo.html
+++ b/pages/equipo.html
@@ -107,7 +107,7 @@
               </div>
           
               <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
-                <div class="card-body d-flex align-items-center bg-secondary text-light">
+                <div class="card-body d-flex align-items-center bg-secondary text-light acordion">
                   <p class=" col-sm-5 col-md-6">El desarrollo empezó como un proyecto llamado Hungry Knight, y revelado en Kickstarter para recaudar fondos y poder realizar el juego de sus sueños, donde a medida qué las donaciones se sumaban iban agregando características y ampliando la producción del juego.</p>
                   <img class="col-sm-7 col-md-6" src="../img/hungry knight.jpg" alt="hungry-knight">
                 </div>
@@ -122,7 +122,7 @@
                 </h2>
               </div>
               <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-                <div class="card-body d-flex align-items-center bg-secondary text-light">
+                <div class="card-body d-flex align-items-center bg-secondary text-light acordion">
                   <p class="col-sm-7 col-md-6">Todo el juego fue desarrollado con Unity, el motor de videojuegos multiplataforma creado por Unity Technologies. Lo más interesante es que todo el arte, diseño de personajes y animaciones básicas fue creado a mano.</p>
                   <img class="col-sm-7 col-md-6" src="../img/Unity_Technologies_logo.svg.png" alt="">
                 </div>
@@ -137,7 +137,7 @@
                 </h2>
               </div>
               <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-                <div class="card-body d-flex align-items-center bg-secondary text-light">
+                <div class="card-body d-flex align-items-center bg-secondary text-light acordion">
                   <p class="col-sm-8 col-md-6">Usando herramientas de diseño 2D en un ambiente 3D fue como construyeron los distintos niveles y la interacción con enemigos y el entorno.</p>
                   <img class="col-sm-4 col-md-6" src="../img/02-6-unity_parallax.1-min-compressor.webp" alt="">
                 </div>
@@ -147,13 +147,13 @@
         </div>
       <footer class="mt-3 bg-dark">
         <p>Todos los derechos reservados © Team Cherry</p>
-        <a href="https://twitter.com/TeamCherryGames">
+        <a href="https://twitter.com/TeamCherryGames" target="_blank">
             <i class="fa-brands fa-twitter"></i>
         </a>
-        <a href="https://www.youtube.com/channel/UCZS2K8ZsUmujTuj3cNMyBSA">
+        <a href="https://www.youtube.com/channel/UCZS2K8ZsUmujTuj3cNMyBSA" target="_blank">
             <i class="fa-brands fa-youtube"></i>
         </a>
-        <a href="https://www.facebook.com/teamcherrygames/">
+        <a href="https://www.facebook.com/teamcherrygames/" target="_blank">
             <i class="fa-brands fa-facebook"></i>
         </a>
         <a href="https://www.teamcherry.com.au/">Sitio Oficial</a>
