--- a/pages/lore.html
+++ b/pages/lore.html
@@ -136,13 +136,13 @@
 
     <footer class="mt-3">
       <p>Todos los derechos reservados © Team Cherry</p>
-      <a href="https://twitter.com/TeamCherryGames">
+      <a href="https://twitter.com/TeamCherryGames" target="_blank">
           <i class="fa-brands fa-twitter"></i>
       </a>
-      <a href="https://www.youtube.com/channel/UCZS2K8ZsUmujTuj3cNMyBSA">
+      <a href="https://www.youtube.com/channel/UCZS2K8ZsUmujTuj3cNMyBSA" target="_blank">
           <i class="fa-brands fa-youtube"></i>
       </a>
-      <a href="https://www.facebook.com/teamcherrygames/">
+      <a href="https://www.facebook.com/teamcherrygames/" target="_blank">
           <i class="fa-brands fa-facebook"></i>
       </a>
       <a href="https://www.teamcherry.com.au/">Sitio Oficial</a>
