--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -52,13 +52,13 @@
           <div class="container d-flex flex-column align-items-center justify-content-center">
             <h2 class="text-center mt-5">Visita la Tienda de Hollow Knight Silksong!</h2>
               <div class="row icon-tienda">
-                <a href="https://store.steampowered.com/app/1030300/Hollow_Knight_Silksong/">
+                <a href="https://store.steampowered.com/app/1030300/Hollow_Knight_Silksong/" target="_blank">
                     <i class="fa-brands fa-steam"></i>
                 </a>
-                <a href="https://store.playstation.com/en-us/concept/10005908">
+                <a href="https://store.playstation.com/en-us/concept/10005908" target="_blank">
                     <i class="fa-brands fa-playstation"></i>
                 </a>
-                <a href="https://www.xbox.com/es-AR/games/hollow-knight-silksong">
+                <a href="https://www.xbox.com/es-AR/games/hollow-knight-silksong" target="_blank">
                     <i class="fa-brands fa-xbox"></i>
                 </a>
               </div> 
@@ -69,13 +69,13 @@
           <div class="container d-flex flex-column align-items-center justify-content-center">
             <h2 class="text-center mt-5" >Visita la Tienda de Hollow Knight!</h2>
             <div class="row icon-tienda">
-              <a href="https://store.steampowered.com/app/367520/Hollow_Knight/">
+              <a href="https://store.steampowered.com/app/367520/Hollow_Knight/" target="_blank">
                   <i class="fa-brands fa-steam"></i>
               </a>
-              <a href="https://store.playstation.com/es-pe/product/UP1822-CUSA13632_00-HOLLOWKNIGHT18US">
+              <a href="https://store.playstation.com/es-pe/product/UP1822-CUSA13632_00-HOLLOWKNIGHT18US" target="_blank">
                   <i class="fa-brands fa-playstation"></i>
               </a>
-              <a href="https://www.xbox.com/es-ar/games/store/Hollow-Knight-Edicion-Corazon-Vacio/9MW9469V91LM">
+              <a href="https://www.xbox.com/es-ar/games/store/Hollow-Knight-Edicion-Corazon-Vacio/9MW9469V91LM" target="_blank">
                   <i class="fa-brands fa-xbox"></i>
               </a>
             </div>  
@@ -88,13 +88,13 @@
       
       <footer class="bg-dark">
         <p>Todos los derechos reservados © Team Cherry</p>
-        <a href="https://twitter.com/TeamCherryGames">
+        <a href="https://twitter.com/TeamCherryGames" target="_blank">
             <i class="fa-brands fa-twitter"></i>
         </a>
-        <a href="https://www.youtube.com/channel/UCZS2K8ZsUmujTuj3cNMyBSA">
+        <a href="https://www.youtube.com/channel/UCZS2K8ZsUmujTuj3cNMyBSA" target="_blank">
             <i class="fa-brands fa-youtube"></i>
         </a>
-        <a href="https://www.facebook.com/teamcherrygames/">
+        <a href="https://www.facebook.com/teamcherrygames/" target="_blank">
             <i class="fa-brands fa-facebook"></i>
         </a>
         <a href="https://www.teamcherry.com.au/">Sitio Oficial</a>
