--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body class="bg-index">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark d-flex justify-content-center">
-            <a class="navbar-brand" href="/index.html">
+            <a class="navbar-brand" href="./index.html">
                 <img src="./img/silksongLogoBlanco.png" alt="logo" height="100px">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -98,13 +98,13 @@
 
     <footer class="bg-secondary">
         <p>Todos los derechos reservados © Team Cherry</p>
-        <a href="https://twitter.com/TeamCherryGames">
+        <a href="https://twitter.com/TeamCherryGames" target="_blank">
             <i class="fa-brands fa-twitter"></i>
         </a>
-        <a href="https://www.youtube.com/channel/UCZS2K8ZsUmujTuj3cNMyBSA">
+        <a href="https://www.youtube.com/channel/UCZS2K8ZsUmujTuj3cNMyBSA" target="_blank">
             <i class="fa-brands fa-youtube"></i>
         </a>
-        <a href="https://www.facebook.com/teamcherrygames/">
+        <a href="https://www.facebook.com/teamcherrygames/" target="_blank">
             <i class="fa-brands fa-facebook"></i>
         </a>
         <a href="https://www.teamcherry.com.au/">Sitio Oficial</a>
