--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../img/logohollowhead.png" type="image/x-icon">
-    <meta name="description" content="galeria, juego, hollow, knight, hornet, fotos, imagenes, fondos">
+    <meta name="description" content="Observa las mejores fotos de Hollow Knight Silksong">
+    <meta name="keyword" content="galeria, juego, hollow, knight, hornet, fotos, imagenes, fondos">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
@@ -114,13 +115,13 @@
 
     <footer class="mt-3">
       <p>Todos los derechos reservados © Team Cherry</p>
-      <a href="https://twitter.com/TeamCherryGames">
+      <a href="https://twitter.com/TeamCherryGames" target="_blank">
           <i class="fa-brands fa-twitter"></i>
       </a>
-      <a href="https://www.youtube.com/channel/UCZS2K8ZsUmujTuj3cNMyBSA">
+      <a href="https://www.youtube.com/channel/UCZS2K8ZsUmujTuj3cNMyBSA" target="_blank">
           <i class="fa-brands fa-youtube"></i>
       </a>
-      <a href="https://www.facebook.com/teamcherrygames/">
+      <a href="https://www.facebook.com/teamcherrygames/" target="_blank">
           <i class="fa-brands fa-facebook"></i>
       </a>
       <a href="https://www.teamcherry.com.au/">Sitio Oficial</a>
